Fixing alignment

--- a/mystyle.css
+++ b/mystyle.css
@@ -21,7 +21,6 @@ nav{
 }
 
 nav ul{
-    
     border-bottom: 5px double rgb(200, 200, 200);
     padding-left: 0%;
     margin-top: 2px;
@@ -68,8 +67,7 @@ aside ul{
     color: lightgrey;
     padding-left: 0%;
     margin-top: 0%;
-    margin-bottom: 0%;
-    overflow: hidden;   
+    margin-bottom: 0%;    
 }
 
 aside li{
@@ -89,32 +87,49 @@ aside li a:hover {
 }
 
 section {
-    width: 68%;
-    padding: 25px;
+    width: 70%;
+    /*padding: 25px;*/
     margin-left: 5%;
     margin-top: 20px; 
     background-color: rgb(175, 175, 175);
 }
 
+
 .HOME_SITE {
-    border-left: 1rem solid rgb(54, 97, 111);
+    background: linear-gradient(90deg, rgba(54, 97, 111,1) 0%, rgba(54, 97, 111,1) 1rem, rgba(175, 175, 175,1) 1rem, rgba(175, 175, 175,1) 100%);
 }
 
 .FGALERY {
-    border-left: 1rem solid rgb(52, 51, 114);
+    background: linear-gradient(90deg, rgba(52, 51, 114,1) 0%, rgba(52, 51, 114,1) 1rem, rgba(175, 175, 175,1) 1rem, rgba(175, 175, 175,1) 100%);
 }
 
 .AGALERY {
-    border-left: 1rem solid rgb(114, 114, 51);
+    background: linear-gradient(90deg, rgba(114, 114, 51,1) 0%, rgba(114, 114, 51,1) 1rem, rgba(175, 175, 175,1) 1rem, rgba(175, 175, 175,1) 100%);
 }
 
 .VGALERY {
-    border-left: 1rem solid rgb(51, 114, 68);
+    background: linear-gradient(90deg, rgba(51, 114, 68,1) 0%, rgba(51, 114, 68,1) 1rem, rgba(175, 175, 175,1) 1rem, rgba(175, 175, 175,1) 100%);
+}
+
+@media (max-width: 1200px)
+{
+    aside {
+        visibility: hidden;
+    }
+
+    section {
+        width: 90%;
+        margin-left: 5%;
+    }
 }
 
 p{
     padding: 5px;
     margin: 1px;
+}
+
+section p {
+    padding-left: 1.75rem;
 }
 
 h1{
@@ -125,4 +140,8 @@ h1{
 h2{
     padding: 5px;
     margin: 1px;
+}
+
+section h2 {
+    padding-left: 1.75rem;
 }
